<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    tools:context=".RegisterPage">

    <TextView
        android:id="@+id/registerText1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="29dp"
        android:gravity="center"
        android:text="REGISTER"
        android:textColor="@color/black"
        android:textSize="48sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/emailTextBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/emailTextBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/baseline_email"
        android:ems="10"
        android:gravity="center"
        android:hint="Enter  Email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/CardTextBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerText1" />

    <EditText
        android:id="@+id/passwordRepeatTextBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="17dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/baseline_password_24"
        android:ems="10"
        android:gravity="center"
        android:hint="Repeat password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/statusLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextBox" />

    <EditText
        android:id="@+id/passwordTextBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="29dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/baseline_password_24"
        android:ems="10"
        android:gravity="center"
        android:hint="Enter Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/passwordRepeatTextBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CardTextBox" />

    <EditText
        android:id="@+id/CardTextBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="34dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/baseline_credit_card_24"
        android:ems="10"
        android:gravity="center"
        android:hint="Enter Credit Card"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/passwordTextBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextBox" />

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:gravity="center"
        android:text="Register"
        app:layout_constraintBottom_toTopOf="@+id/loginLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/statusLabel" />

    <TextView
        android:id="@+id/loginLink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="45dp"
        android:gravity="center"
        android:text="Click here to Login!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterButton" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="415dp"
        android:layout_height="126dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="1dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/registerText1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/statusLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="26dp"
        android:gravity="center"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toTopOf="@+id/RegisterButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRepeatTextBox" />


</androidx.constraintlayout.widget.ConstraintLayout>